예제 Simple하게 변경

--- a/Animal/templates/index.html
+++ b/Animal/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="static/css/site.css">
-    <title>Node.js Application</title>
+    <title>Django Application</title>
 </head>
 <body>
     <div class="main-container">
@@ -13,14 +13,11 @@
         <div class="content">
             <div class="tweet-container">
                 <!-- Input Name -->
-                <a href="/animal">동물 입양</a>
+                <a href="/animal">상세 정보</a>
             </div>
             <div class="content-body">
-                <div class="success-text">꾸며주세요!</div>
-                <!-- 
-                <div class="description line-1"> Azure DevOps Project has been successfully setup </div>
-                <div class="description line-2"> Your Node.js app is up</div>
-                 -->
+                <div class="success-text">안녕하세요!</div>
+                
             </div>
         </div>
     </div>
