--- a/Animal/templates/animal.html
+++ b/Animal/templates/animal.html
@@ -3,24 +3,24 @@
 
 <head>
     <link rel="stylesheet" href="static/css/site.css">
-    <title>Node.js Application</title>
+    <title>Django Application</title>
 </head>
 
 <body>
     <div class="main-container">
         <div class="content">
             <div class="content-body">
-                <div class="success-text">입양 정보</div>
+                <div class="success-text">상세 정보</div>
                 <div class="animal-container">
                 <table>
                     <tbody>
                     <tr>
                         <th>사진</th>
-                        <!-- 아래 src 자리에 입양하고싶은 동물의 이미지 주소를 넣어주세요. -->
+                        <!-- 아래 src 자리에 이미지 주소를 넣어주세요. -->
                         <td><img src="static/img/giraffe.png"></td>
                     </tr>
                     <tr>
-                        <th>동물 종류</th>
+                        <th>종류</th>
                         <td><!-- 동물 종류가 무엇인가요? --></td>
                         
                     </tr>
